--- a/include/footer.html.example
+++ b/include/footer.html.example
@@ -1,5 +1,6 @@
 <p class="footer">
-- <a href="http://wakaba.c3.cx/">wakaba <const WAKABA_VERSION></a>
+- <a href="https://github.com/some1suspicious/wakaba-reddy">wakaba-reddy <const WAKABA_VERSION></a>
++ <a href="http://wakaba.c3.cx/">wakaba 3.0.9</a>
 + <a href="http://www.2chan.net/">futaba</a>
 + <a href="http://www.1chan.net/futallaby/">futallaby</a>
 -</p>
